JumpScript/tests/baselines/reference/emitArrowFunctionWhenUsingArguments12_ES6.errors.txt
tests/cases/conformance/es6/arrowFunction/emitArrowFunctionWhenUsingArguments12_ES6.jump(2,7): error TS1210: Invalid use of 'arguments'. Class definitions are automatically in strict mode.


==== tests/cases/conformance/es6/arrowFunction/emitArrowFunctionWhenUsingArguments12_ES6.jump (1 errors) ====
    class C {
        f(arguments) {
          ~~~~~~~~~
!!! error TS1210: Invalid use of 'arguments'. Class definitions are automatically in strict mode.
            var a = () => arguments;
        }
    }